--- a/index.html
+++ b/index.html
@@ -17,16 +17,42 @@
   </head>
   <body>
     <header class="header">
-      <div class="logo-box">
-        <img src="./img/logo-white.png" alt="logo" class="logo" />
+      <div class="header__logo-box">
+        <img src="./img/logo-white.png" alt="logo" class="header__logo" />
       </div>
 
-      <div class="text-box">
+      <div class="header__text-box">
         <h1 class="heading-primary">
-          <span class="heading-primary-main">OUTDOORS</span>
-          <span class="heading-primary-sub">is where life happnes</span>
+          <span class="heading-primary--main">OUTDOORS</span>
+          <span class="heading-primary--sub">is where life happnes</span>
         </h1>
+        <a href="#" class="btn btn--white btn--animated">Discover Our Tours</a>
       </div>
     </header>
+
+    <section class="grid-test">
+      <div class="row">
+        <div class="col-1-of-2">Col 1 of 2</div>
+        <div class="col-1-of-2">Col 1 of 2</div>
+      </div>
+
+      <div class="row">
+        <div class="col-1-of-3">Col 1 of 3</div>
+        <div class="col-1-of-3">Col 1 of 3</div>
+        <div class="col-1-of-3">Col 1 of 3</div>
+      </div>
+
+      <div class="row">
+        <div class="col-1-of-3">Col 1 of 3</div>
+        <div class="col-2-of-3">Col 2 of 3</div>
+      </div>
+
+      <div class="row">
+        <div class="col-1-of-4">Col 1 of 4</div>
+        <div class="col-1-of-4">Col 1 of 4</div>
+        <div class="col-1-of-4">Col 1 of 4</div>
+        <div class="col-1-of-4">Col 1 of 4</div>
+      </div>
+    </section>
   </body>
 </html>
