--- a/index.html
+++ b/index.html
@@ -30,7 +30,148 @@
       </div>
     </header>
 
-    <section class="grid-test">
+    <main>
+      <section class="section-about">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">
+            Exciting tours for adventours people
+          </h2>
+        </div>
+        <div class="row">
+          <div class="col-1-of-2">
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              You're going to fall in love with nature
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Est non
+              quidem doloribus eveniet eum, cupiditate, quibusdam aliquam
+              voluptates ut officia deleniti laboriosam? Pariatur, iusto vel
+              voluptatum eaque nisi repellat quae.
+            </p>
+
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              Live adventurous life like never before
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Est non
+              quidem doloribus eveniet eum, cupiditate.
+            </p>
+
+            <a href="#" class="btn-text">Learn More &rarr;</a>
+          </div>
+          <div class="col-1-of-2">
+            <div class="composition">
+              <img
+                src="/img/nat-1.jpg"
+                alt="photo1"
+                class="composition__photo composition__photo--p1"
+              /><img
+                src="img/nat-2.jpg"
+                alt="photo2"
+                class="composition__photo composition__photo--p2"
+              /><img
+                src="img/nat-3.jpg"
+                alt="photo3"
+                class="composition__photo composition__photo--p3"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section-features">
+        <div class="row">
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-world"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Explore the world
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Est non
+                quidem doloribus eveniet eum, cupiditate.
+              </p>
+            </div>
+          </div>
+
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-compass"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Meet nature
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Est non
+                quidem doloribus eveniet eum, cupiditate.
+              </p>
+            </div>
+          </div>
+
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-map"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Find your way
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Est non
+                quidem doloribus eveniet eum, cupiditate.
+              </p>
+            </div>
+          </div>
+
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-heart"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Live healthier life
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Est non
+                quidem doloribus eveniet eum, cupiditate.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section-tours">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">Most Popular Tours</h2>
+        </div>
+
+        <div class="row">
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front card__side--front--1">
+                <div class="card__picture card__picture--1">&nbsp;</div>
+                <h4 class="card__heading card__heading-1">
+                  <span class="card__heading-span card__heading-span--1"
+                    >The Sea Explorer</span
+                  >
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>Three day tour</li>
+                    <li>Upto 30 people</li>
+                    <li>2 tour guides</li>
+                    <li>Sleep in cozy places</li>
+                    <li>Difficulty: easy</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="card__side card__side--back card__side--back--1">
+                card back
+              </div>
+            </div>
+          </div>
+          <div class="col-1-of-3">Col 1 of 3</div>
+          <div class="col-1-of-3">Col 1 of 3</div>
+        </div>
+      </section>
+    </main>
+
+    <!-- <section class="grid-test">
       <div class="row">
         <div class="col-1-of-2">Col 1 of 2</div>
         <div class="col-1-of-2">Col 1 of 2</div>
@@ -53,6 +194,6 @@
         <div class="col-1-of-4">Col 1 of 4</div>
         <div class="col-1-of-4">Col 1 of 4</div>
       </div>
-    </section>
+    </section> -->
   </body>
 </html>
