--- a/index.html
+++ b/index.html
@@ -161,12 +161,142 @@
                 </div>
               </div>
               <div class="card__side card__side--back card__side--back--1">
-                card back
+                <div class="card__cta">
+                  <div class="card__price-box">
+                    <p class="card__price-only">Only</p>
+                    <p class="card__price-value">$247</p>
+                  </div>
+                  <a href="" class="btn btn--white">Book Now</a>
+                </div>
               </div>
             </div>
           </div>
-          <div class="col-1-of-3">Col 1 of 3</div>
-          <div class="col-1-of-3">Col 1 of 3</div>
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front card__side--front--1">
+                <div class="card__picture card__picture--2">&nbsp;</div>
+                <h4 class="card__heading card__heading-1">
+                  <span class="card__heading-span card__heading-span--2"
+                    >The Wilds Explorer</span
+                  >
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>Three day tour</li>
+                    <li>Upto 30 people</li>
+                    <li>2 tour guides</li>
+                    <li>Sleep in wild places</li>
+                    <li>Difficulty: Medium</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="card__side card__side--back card__side--back--1">
+                <div class="card__cta">
+                  <div class="card__price-box">
+                    <p class="card__price-only">Only</p>
+                    <p class="card__price-value">$447</p>
+                  </div>
+                  <a href="" class="btn btn--white">Book Now</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front card__side--front--1">
+                <div class="card__picture card__picture--3">&nbsp;</div>
+                <h4 class="card__heading card__heading-1">
+                  <span class="card__heading-span card__heading-span--3"
+                    >The Snow Explorer</span
+                  >
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>Three day tour</li>
+                    <li>Upto 30 people</li>
+                    <li>2 tour guides</li>
+                    <li>Sleep in snowy places</li>
+                    <li>Difficulty: Hard</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="card__side card__side--back card__side--back--3">
+                <div class="card__cta">
+                  <div class="card__price-box">
+                    <p class="card__price-only">Only</p>
+                    <p class="card__price-value">$547</p>
+                  </div>
+                  <a href="" class="btn btn--white">Book Now</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="u-center-text u-margin-top-huge">
+          <a href="#" class="btn btn--green">Discover All Tours</a>
+        </div>
+      </section>
+
+      <section class="section-stories">
+        <div class="bg-video">
+          <video class="bg-video__content" autoplay muted loop>
+            <source src="img/video.mp4" type="video/mp4" />
+            <source src="img/video.webm" type="video/webm" />
+            your browser is not supported
+          </video>
+        </div>
+
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">We make people genuinely happy</h2>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img src="./img/nat-8.jpg" alt="img" class="story__img" />
+              <figcaption class="story__caption">Mary Smith</figcaption>
+            </figure>
+
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                I had a best week with my family
+              </h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Incidunt provident, a sapiente rem quod dicta in recusandae
+                dolorum voluptatibus, consequatur distinctio dignissimos,
+                nesciunt ipsa sed hic fugit? Perferendis, veniam pariatur!
+                dolorum voluptatibus, consequatur distinctio dignissimos.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img src="./img/nat-9.jpg" alt="img" class="story__img" />
+              <figcaption class="story__caption">Jack Wilson</figcaption>
+            </figure>
+
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Wow my life is different now!
+              </h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Incidunt provident, a sapiente rem quod dicta in recusandae
+                dolorum voluptatibus, consequatur distinctio dignissimos,
+                nesciunt ipsa sed hic fugit? Perferendis, veniam pariatur!
+                dolorum voluptatibus, consequatur distinctio dignissimos.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="u-center-text u-margin-top-huge">
+          <a href="#" class="btn-text">Read all stories &rarr;</a>
         </div>
       </section>
     </main>
