--- a/index.html
+++ b/index.html
@@ -372,6 +372,45 @@
       </section>
     </main>
 
+    <footer class="footer">
+      <div class="footer__logo-box">
+        <img
+          src="/img/logo-green-2x.png"
+          alt="full-logo"
+          class="footer__logo"
+        />
+      </div>
+
+      <div class="row">
+        <div class="col-1-of-2">
+          <div class="footer__navigation">
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a href="" class="footer__link">Company</a>
+              </li>
+              <li class="footer__item">
+                <a href="" class="footer__link">Contact Us</a>
+              </li>
+              <li class="footer__item">
+                <a href="" class="footer__link">Carrer</a>
+              </li>
+              <li class="footer__item">
+                <a href="" class="footer__link">Provacy Policy</a>
+              </li>
+              <li class="footer__item">
+                <a href="" class="footer__link">Terms</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-1-of-2">
+          <p class="footer__copyright">
+            Built with ❤️ by mihir verma | Copyright &copy;2023
+          </p>
+        </div>
+      </div>
+    </footer>
+
     <!-- <section class="grid-test">
       <div class="row">
         <div class="col-1-of-2">Col 1 of 2</div>
