--- a/index.html
+++ b/index.html
@@ -16,6 +16,36 @@
     <title>Natours | Exciting tours for adventurous people</title>
   </head>
   <body>
+    <div class="navigation">
+      <input type="checkbox" class="navigation__checkbox" id="navi-toggle" />
+      <label for="navi-toggle" class="navigation__button"
+        ><span class="navigation__icon"> &nbsp;</span></label
+      >
+      <div class="navigation__background">&nbsp;</div>
+
+      <nav class="navigation__nav">
+        <ul class="navigation__list">
+          <li class="navigation__item">
+            <a href="" class="navigation__link"> <span>01</span> Company</a>
+          </li>
+          <li class="navigation__item">
+            <a href="" class="navigation__link"> <span>02</span> Contact Us</a>
+          </li>
+          <li class="navigation__item">
+            <a href="" class="navigation__link"> <span>03</span> Carrer</a>
+          </li>
+          <li class="navigation__item">
+            <a href="" class="navigation__link">
+              <span>04</span> Provacy Policy</a
+            >
+          </li>
+          <li class="navigation__item">
+            <a href="" class="navigation__link"> <span>05</span> Terms</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
     <header class="header">
       <div class="header__logo-box">
         <img src="./img/logo-white.png" alt="logo" class="header__logo" />
