--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                   </ul>
                 </div>
               </div>
-              <div class="card__side card__side--back card__side--back--1">
+              <div class="card__side card__side--back card__side--back--2">
                 <div class="card__cta">
                   <div class="card__price-box">
                     <p class="card__price-only">Only</p>
@@ -405,7 +405,7 @@
     <footer class="footer">
       <div class="footer__logo-box">
         <img
-          src="/img/logo-green-2x.png"
+          srcset="/img/logo-green-1x.png 1x, /img/logo-green-2x.png 2x"
           alt="full-logo"
           class="footer__logo"
         />
